--- a/FlightTicketSalesSite.Service/FlightTicketSalesSite.Service.csproj
+++ b/FlightTicketSalesSite.Service/FlightTicketSalesSite.Service.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\FlightTicketSalesSite.Data\FlightTicketSalesSite.Data.csproj" />
+    <ProjectReference Include="..\FlightTicketSalesSite.Entity\FlightTicketSalesSite.Entity.csproj" />
+  </ItemGroup>
+
 </Project>
