--- a/FlightTicketSalesSite/FlightTicketSalesSite.csproj
+++ b/FlightTicketSalesSite/FlightTicketSalesSite.csproj
@@ -20,6 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\FlightTicketSalesSite.Core\FlightTicketSalesSite.Core.csproj" />
     <ProjectReference Include="..\FlightTicketSalesSite.Data\FlightTicketSalesSite.Data.csproj" />
     <ProjectReference Include="..\FlightTicketSalesSite.Service\FlightTicketSalesSite.Service.csproj" />
   </ItemGroup>
